Separate Java Toolchain for tests
to make sure that all the versions we release are compatible with all
Java versions we are claiming to support, set a separate Java Toolchain
for tests executions.

* Expose `javaVersion` as project property to be able to control such a
Java version externally, e.g., via GitHub Actions

**Auto-cherry-pick to `3.2.x`**