@@ -272,6 +272,12 @@ configure(javaProjects) { subproject ->
 		environment "SPRING_AMQP_DESERIALIZATION_TRUST_ALL", "true"
 
 		useJUnitPlatform()
+
+		javaLauncher = javaToolchains.launcherFor {
+			languageVersion = JavaLanguageVersion.of(project.hasProperty('javaVersion') ? project.javaVersion as int : 25)
+		}
+
+		jvmArgs '--enable-native-access=ALL-UNNAMED'
 	}
 
 	checkstyle {
